Anonymous | Login | 2021-01-15 21:19 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0030422 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2018-12-22 23:37 | 2020-09-14 22:54 | ||||||||
Reporter | agv | ||||||||||||
Assigned To | msv | ||||||||||||
Priority | normal | Severity | major | ||||||||||
Status | new | Resolution | open | ||||||||||
Platform | Windows | OS | VC++ 2015 | OS Version | 32 bit | ||||||||
Product Version | [OCCT] 7.3.0 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0030422: Random behaviour of BRepAdaptor_CompCurve | ||||||||||||
Description | With a particular wire, the class BRepAdaptor_CompCurve produces random results. My output is: FP = 0.0000; LP = 1.0000, middle:( -27.613 147.673 8.412) FP = 0.0000; LP = 3.0000, middle:( -28.048 49.225 79.887) FP = 0.0000; LP = 1.0000, middle:( -27.613 147.673 8.412) FP = 0.0000; LP = 1.0000, middle:( -27.613 147.673 8.412) FP = 0.0000; LP = 3.0000, middle:( -28.048 49.225 79.887) FP = 0.0000; LP = 1.0000, middle:( -27.613 147.673 8.412) FP = 0.0000; LP = 3.0000, middle:( -28.048 49.225 79.887) FP = 0.0000; LP = 3.0000, middle:( -28.048 49.225 79.887) FP = 0.0000; LP = 1.0000, middle:( -27.613 147.673 8.412) FP = 0.0000; LP = 3.0000, middle:( -28.048 49.225 79.887) FP = 0.0000; LP = 3.0000, middle:( -28.048 49.225 79.887) FP = 0.0000; LP = 1.0000, middle:( -27.613 147.673 8.412) FP = 0.0000; LP = 1.0000, middle:( -27.613 147.673 8.412) FP = 0.0000; LP = 1.0000, middle:( -27.613 147.673 8.412) FP = 0.0000; LP = 3.0000, middle:( -28.048 49.225 79.887) FP = 0.0000; LP = 3.0000, middle:( -28.048 49.225 79.887) FP = 0.0000; LP = 1.0000, middle:( -27.613 147.673 8.412) FP = 0.0000; LP = 3.0000, middle:( -28.048 49.225 79.887) FP = 0.0000; LP = 3.0000, middle:( -28.048 49.225 79.887) FP = 0.0000; LP = 1.0000, middle:( -27.613 147.673 8.412) Reproduced in 7.3.0 / vc14 / 32bit Similar result in OCCT 7.1 and 7.2 and also with VisualStudio 2010. | ||||||||||||
Steps To Reproduce | int main() { TopoDS_Shape aShape; BRep_Builder aBld; for (int i = 0; i < 20; i++) { BRepTools::Read(aShape, "sect.brep", aBld); const BRepAdaptor_CompCurve aCurve(TopoDS::Wire(aShape)); const Standard_Real aParam[2] = { aCurve.FirstParameter(), aCurve.LastParameter() }; gp_Pnt aPnt; aCurve.D0(0.5 *(aParam[0]+aParam[1]), aPnt); printf("FP = %7.4f; LP = %7.4f, middle:(%8.3f %8.3f %8.3f)\n", aParam[0], aParam[1], aPnt.X(), aPnt.Y(), aPnt.Z()); } return 0; } | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | ![]() | ||||||||||||
![]() |
|||
Date Modified | Username | Field | Change |
2018-12-22 23:37 | agv | New Issue | |
2018-12-22 23:37 | agv | Assigned To | => msv |
2018-12-22 23:37 | agv | File Added: sect.brep | |
2018-12-24 11:06 | msv | Target Version | Unscheduled => 7.4.0 |
2019-08-12 17:45 | msv | Target Version | 7.4.0 => 7.5.0 |
2020-09-14 22:54 | msv | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |